--- a/perception/compare_map_segmentation/CMakeLists.txt
+++ b/perception/compare_map_segmentation/CMakeLists.txt
@@ -89,8 +89,6 @@ install(
   RUNTIME DESTINATION bin
 )
 
-ament_auto_package(
-  INSTALL_TO_SHARE
+ament_auto_package(INSTALL_TO_SHARE
   launch
-  config
 )
