--- a/perception/detected_object_validation/config/object_lanelet_filter.param.yaml
+++ b/perception/detected_object_validation/config/object_lanelet_filter.param.yaml
@@ -2,10 +2,10 @@
   ros__parameters:
     filter_target_label:
       UNKNOWN : true
-      CAR : false
-      TRUCK : false
-      BUS : false
-      TRAILER : false
-      MOTORCYCLE : false
-      BICYCLE : false
-      PEDESTRIAN : false
+      CAR : true
+      TRUCK : true
+      BUS : true
+      TRAILER : true
+      MOTORCYCLE : true
+      BICYCLE : true
+      PEDESTRIAN : true
